@@ -4,7 +4,7 @@ Test::File::ShareDir - Create a Fake ShareDir for your modules for testing.
 
 # VERSION
 
-version 1.000006
+version 1.001000
 
 # SYNOPSIS
 
