@@ -8,6 +8,9 @@ Release history for Test-File-ShareDir
  - runtime: (suggests: +1)
  - test: +1 (recommends: -2, suggests: +2)
 
+ [Features]
+ - OO interfaces now all have a ->clear method.
+
 1.000005 2014-08-15T23:41:58Z
  [00 Trivial]
  - CPANDAY!
